[package]
name = "passive-packet"
version = "0.1.0"
authors = ["Daniel Lockyer <thisisdaniellockyer@gmail.com>"]

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies.pnet]
path = "../libpnet"
features = ["pcap"]

[dependencies]
curl = "0.4"
iron = "0.5"
staticfile = "0.4"
mount = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
peel-ip = { path = "../peel-ip" }
